Update Podfile and install dependecies - Alamofire 4.7

--- a/ISS Position/Podfile
+++ b/ISS Position/Podfile
@@ -6,6 +6,7 @@ target 'ISS Position' do
   use_frameworks!
 
   # Pods for ISS Position
+  pod 'Alamofire', '~> 4.7'
 
   target 'ISS PositionTests' do
     inherit! :search_paths
